@@ -43,7 +43,11 @@ if (strtolower(session_module_name()) == 'files') {
 
 setlanguage();
 
-$cfg = new LAMCfgMain();
+if (!isset($_SESSION['cfgMain'])) {
+	$cfg = new LAMCfgMain();
+	$_SESSION['cfgMain'] = $cfg;
+}
+$cfg = &$_SESSION['cfgMain'];
 
 // check if user is logged in
 if (!isset($_SESSION["mainconf_password"]) || (!$cfg->checkPassword($_SESSION["mainconf_password"]))) {
@@ -58,8 +62,9 @@ if (isset($_POST['cancel'])) {
 }
 
 $errors = array();
+$messages = array();
 // check if submit button was pressed
-if (isset($_POST['submit'])) {
+if (isset($_POST['submitFormData'])) {
 	// remove double slashes if magic quotes are on
 	if (get_magic_quotes_gpc() == 1) {
 		$postKeys = array_keys($_POST);
@@ -117,11 +122,61 @@ if (isset($_POST['submit'])) {
 	$cfg->passwordMinNumeric = $_POST['passwordMinNumeric'];
 	$cfg->passwordMinSymbol = $_POST['passwordMinSymbol'];
 	$cfg->passwordMinClasses = $_POST['passwordMinClasses'];
+	if (isset($_POST['sslCaCertUpload'])) {
+		if (!isset($_FILES['sslCaCert']) || ($_FILES['sslCaCert']['size'] == 0)) {
+			$errors[] = _('No file selected.');
+		}
+		else {
+			$handle = fopen($_FILES['sslCaCert']['tmp_name'], "r");
+			$data = fread($handle, 10000000);
+			fclose($handle);
+			$sslReturn = $cfg->uploadSSLCaCert($data);
+			if ($sslReturn !== true) {
+				$errors[] = $sslReturn;
+			}
+			else {
+				$messages[] = _('You might need to restart your webserver for changes to take effect.');
+			}
+		}
+	}
+	if (isset($_POST['sslCaCertDelete'])) {
+		$cfg->deleteSSLCaCert();
+		$messages[] = _('You might need to restart your webserver for changes to take effect.');
+	}
+	if (isset($_POST['sslCaCertImport'])) {
+		$matches = array();
+		if (preg_match('/^([a-zA-Z0-9_\\.-]+)(:([0-9]+))?$/', $_POST['serverurl'], $matches)) {
+			$port = '636';
+			if (isset($matches[3]) && !empty($matches[3])) {
+				$port = $matches[3];
+			}
+			$pemResult = getLDAPSSLCertificate($matches[1], $port);
+			if ($pemResult !== false) {
+				$messages[] = _('Imported certificate from server.');
+				$messages[] = _('You might need to restart your webserver for changes to take effect.');
+				$cfg->uploadSSLCaCert($pemResult);
+			}
+			else {
+				$errors[] = _('Unable to import server certificate. Please use the upload function.');
+			}
+		}
+		else {
+			$errors[] = _('Invalid server name. Please enter "server" or "server:port".');
+		}
+	}
+	foreach ($_POST as $key => $value) {
+		if (strpos($key, 'deleteCert_') === 0) {
+			$index = substr($key, strlen('deleteCert_'));
+			$cfg->deleteSSLCaCert($index);
+		}
+	}
 	// save settings
-	$cfg->save();
-	if (sizeof($errors) == 0) {
-		metaRefresh('../login.php?confMainSavedOk=1');
-		exit();
+	if (isset($_POST['submit'])) {
+		$cfg->save();
+		if (sizeof($errors) == 0) {
+			metaRefresh('../login.php?confMainSavedOk=1');
+			exit();
+		}
 	}
 }
 
@@ -166,7 +221,7 @@ echo $_SESSION['header'];
 		</table>
 		<br>
 		<!-- form for adding/renaming/deleting profiles -->
-		<form action="mainmanage.php" method="post">
+		<form enctype="multipart/form-data" action="mainmanage.php" method="post">
 
 <?php
 // include all JavaScript files
@@ -188,23 +243,97 @@ $container = new htmlTable();
 for ($i = 0; $i < sizeof($errors); $i++) {
 	$container->addElement(new htmlStatusMessage("ERROR", $errors[$i]), true);
 }
+for ($i = 0; $i < sizeof($messages); $i++) {
+	$container->addElement(new htmlStatusMessage("INFO", $messages[$i]), true);
+}
 
 // check if config file is writable
 if (!$cfg->isWritable()) {
 	$container->addElement(new htmlStatusMessage('WARN', 'The config file is not writable.', 'Your changes cannot be saved until you make the file writable for the webserver user.'), true);
 }
-$container->addElement(new htmlSpacer(null, '20px'), true);
 
 // security settings
+$container->addElement(new htmlSubTitle(_("Security settings")), true);
 $securityTable = new htmlTable();
 $options = array(5, 10, 20, 30, 60, 90, 120, 240);
 $securityTable->addElement(new htmlTableExtendedSelect('sessionTimeout', $options, array($cfg->sessionTimeout), _("Session timeout"), '238'), true);
 $securityTable->addElement(new htmlTableExtendedInputTextarea('allowedHosts', implode("\n", explode(",", $cfg->allowedHosts)), '30', '7', _("Allowed hosts"), '241'), true);
-$securityField = new htmlFieldset($securityTable, _("Security settings"));
-$container->addElement($securityField, true);
+// SSL certificate
+$securityTable->addElement(new htmlOutputText(_('SSL certificates')));
+$sslMethod = _('use system certificates');
+$sslFileName = $cfg->getSSLCaCertTempFileName();
+if ($sslFileName != null) {
+	$sslMethod = _('use custom CA certificate');
+}
+$sslDelSaveGroup = new htmlGroup();
+$sslDelSaveGroup->addElement(new htmlOutputText($sslMethod));
+$sslDelSaveGroup->addElement(new htmlSpacer('5px', null));
+// delete+download button
+if ($sslFileName != null) {
+	$sslDownloadBtn = new htmlLink('', '../../tmp/' . $sslFileName, '../../graphics/save.png');
+	$sslDownloadBtn->setTargetWindow('_blank');
+	$sslDownloadBtn->setTitle(_('Download CA certificates'));
+	$sslDelSaveGroup->addElement($sslDownloadBtn);
+	$sslDeleteBtn = new htmlButton('sslCaCertDelete', 'delete.png', true);
+	$sslDeleteBtn->setTitle(_('Delete all CA certificates'));
+	$sslDelSaveGroup->addElement($sslDeleteBtn);
+}
+$securityTable->addElement($sslDelSaveGroup);
+$securityTable->addElement(new htmlHelpLink('204'));
+$securityTable->addElement(new htmlSpacer('250px', null), true);
+$securityTable->addElement(new htmlOutputText(''));
+$sslButtonTable = new htmlTable();
+$sslButtonTable->colspan = 3;
+$sslButtonTable->addElement(new htmlInputFileUpload('sslCaCert'));
+$sslUploadBtn = new htmlButton('sslCaCertUpload', _('Upload'));
+$sslUploadBtn->setIconClass('upButton');
+$sslUploadBtn->setTitle(_('Upload CA certificate'));
+$sslButtonTable->addElement($sslUploadBtn, true);
+if (function_exists('stream_socket_client')) {
+	$sslImportGroup = new htmlGroup();
+	$sslImportGroup->addElement(new htmlOutputText('ldaps://'));
+	$sslImportServerUrl = !empty($_POST['serverurl']) ? $_POST['serverurl'] :  '';
+	$sslImportGroup->addElement(new htmlInputField('serverurl'));
+	$sslButtonTable->addElement($sslImportGroup);
+	$sslImportBtn = new htmlButton('sslCaCertImport', _('Import from server'));
+	$sslImportBtn->setIconClass('downButton');
+	$sslImportBtn->setTitle(_('Imports the certificate directly from your LDAP server.'));
+	$sslImportBtn->setCSSClasses(array('nowrap'));
+	$sslButtonTable->addElement($sslImportBtn);
+	$sslButtonTable->addElement(new htmlEqualWidth(array('btn_sslCaCertUpload', 'btn_sslCaCertImport')));
+}
+$securityTable->addElement($sslButtonTable, true);
+$sslCerts = $cfg->getSSLCaCertificates();
+if (sizeof($sslCerts) > 0) {
+	$certTable = new htmlTable();
+	$certTable->colspan = 3;
+	$certSpace = new htmlSpacer('5px', null);
+	$certTable->addElement(new htmlOutputText(''));
+	$certTable->addElement(new htmlOutputText(_('Serial number')));
+	$certTable->addElement($certSpace);
+	$certTable->addElement(new htmlOutputText(_('Valid to')));
+	$certTable->addElement($certSpace);
+	$certTable->addElement(new htmlOutputText(_('Common name')), true);
+	for ($i = 0; $i < sizeof($sslCerts); $i++) {
+		$serial = isset($sslCerts[$i]['serialNumber']) ? $sslCerts[$i]['serialNumber'] : '';
+		$validTo = isset($sslCerts[$i]['validTo_time_t']) ? $sslCerts[$i]['validTo_time_t'] : '';
+		$cn = isset($sslCerts[$i]['subject']['CN']) ? $sslCerts[$i]['subject']['CN'] : '';
+		$certTable->addElement(new htmlButton('deleteCert_' . $i, 'delete.png', true));
+		$certTable->addElement(new htmlOutputText($serial));
+		$certTable->addElement($certSpace);
+		$certTable->addElement(new htmlOutputText(formatSSLTimestamp($validTo)));
+		$certTable->addElement($certSpace);
+		$certTable->addElement(new htmlOutputText($cn), true);
+	}
+	$securityTable->addElement(new htmlOutputText(''));
+	$securityTable->addElement($certTable, true);
+}
+$container->addElement($securityTable, true);
+
 $container->addElement(new htmlSpacer(null, '10px'), true);
 
 // password policy
+$container->addElement(new htmlSubTitle(_("Password policy")), true);
 $policyTable = new htmlTable();
 $options20 = array(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20);
 $options4 = array(0, 1, 2, 3, 4);
@@ -214,11 +343,11 @@ $policyTable->addElement(new htmlTableExtendedSelect('passwordMinUpper', $option
 $policyTable->addElement(new htmlTableExtendedSelect('passwordMinNumeric', $options20, array($cfg->passwordMinNumeric), _('Minimum numeric characters'), '242'), true);
 $policyTable->addElement(new htmlTableExtendedSelect('passwordMinSymbol', $options20, array($cfg->passwordMinSymbol), _('Minimum symbolic characters'), '242'), true);
 $policyTable->addElement(new htmlTableExtendedSelect('passwordMinClasses', $options4, array($cfg->passwordMinClasses), _('Minimum character classes'), '242'), true);
-$policyField = new htmlFieldset($policyTable, _("Password policy"));
-$container->addElement($policyField, true);
+$container->addElement($policyTable, true);
 $container->addElement(new htmlSpacer(null, '10px'), true);
 
 // logging
+$container->addElement(new htmlSubTitle(_("Logging")), true);
 $loggingTable = new htmlTable();
 $levelOptions = array(_("Debug") => LOG_DEBUG, _("Notice") => LOG_NOTICE, _("Warning") => LOG_WARNING, _("Error") => LOG_ERR);
 $levelSelect = new htmlTableExtendedSelect('logLevel', $levelOptions, array($cfg->logLevel), _("Log level"), '239');
@@ -238,11 +367,11 @@ elseif ($cfg->logDestination == 'SYSLOG') {
 $loggingTable->addElement(new htmlTableExtendedRadio(_("Log destination"), 'logDestination', $destinationOptions, $destinationSelected, '240'), true);
 $loggingTable->addElement(new htmlOutputText(''));
 $loggingTable->addElement(new htmlInputField('logFile', $destinationPath), true);
-$loggingField = new htmlFieldset($loggingTable, _("Logging"));
-$container->addElement($loggingField, true);
+$container->addElement($loggingTable, true);
 $container->addElement(new htmlSpacer(null, '10px'), true);
 
 // change master password
+$container->addElement(new htmlSubTitle(_("Change master password")), true);
 $passwordTable = new htmlTable();
 $pwd1 = new htmlTableExtendedInputField(_("New master password"), 'masterpassword', '', '235');
 $pwd1->setIsPassword(true);
@@ -250,8 +379,7 @@ $passwordTable->addElement($pwd1, true);
 $pwd2 = new htmlTableExtendedInputField(_("Reenter password"), 'masterpassword2', '');
 $pwd2->setIsPassword(true);
 $passwordTable->addElement($pwd2, true);
-$passwordField = new htmlFieldset($passwordTable, _("Change master password"));
-$container->addElement($passwordField, true);
+$container->addElement($passwordTable, true);
 $container->addElement(new htmlSpacer(null, '20px'), true);
 
 // buttons
@@ -259,11 +387,31 @@ if ($cfg->isWritable()) {
 	$buttonTable = new htmlTable();
 	$buttonTable->addElement(new htmlButton('submit', _("Ok")));
 	$buttonTable->addElement(new htmlButton('cancel', _("Cancel")));
-	$container->addElement($buttonTable);
+	$container->addElement($buttonTable, true);
 }
 
+$container->addElement(new htmlHiddenInput('submitFormData', '1'), true);
+
 $tabindex = 1;
-parseHtml(null, $container, array(), false, $tabindex, 'user');
+$globalFieldset = new htmlFieldset($container, _('General settings'));
+parseHtml(null, $globalFieldset, array(), false, $tabindex, 'user');
+
+/**
+ * Formats an LDAP time string (e.g. from createTimestamp).
+ * 
+ * @param String $time LDAP time value
+ * @return String formated time
+ */
+function formatSSLTimestamp($time) {
+	$matches = array();
+	if (!empty($time)) {
+		return date('d.m.Y', $time);
+	}
+	return '';
+}
+
+
+
 ?>
 
 		</form>
