@@ -1,4 +1,5 @@
 September 2013 4.3
+  - Custom SSL CA certificates can be setup in LAM main configuration
   - LAM Pro:
    -> PPolicy: check password history for password reuse
    -> Custom fields: read-only fields for admin interface and file upload for binary data
